[gd_scene load_steps=14 format=3 uid="uid://bi2oakit1yejl"]

[ext_resource type="Script" path="res://ui/scripts/ui.gd" id="1_w4cnj"]
[ext_resource type="Theme" uid="uid://1cgrcgf7at3y" path="res://ui/themes/main_theme.tres" id="1_wfx8k"]
[ext_resource type="PackedScene" uid="uid://b7675gqeab4ta" path="res://ui/ui_main.tscn" id="2_g37sc"]
[ext_resource type="PackedScene" uid="uid://cinf6b7t7l44r" path="res://ui/ui_prefab_editor.tscn" id="3_6iv82"]
[ext_resource type="PackedScene" uid="uid://d0b2rqdlc2ojg" path="res://ui/ui_world.tscn" id="4_li8md"]
[ext_resource type="PackedScene" uid="uid://1066jn4an0tp" path="res://ui/ui_world_editor.tscn" id="5_rb0pw"]
[ext_resource type="Script" path="res://ui/scripts/ui_world.gd" id="7_qrlgp"]
[ext_resource type="PackedScene" uid="uid://cqpche65gohci" path="res://ui/ui_building_interface.tscn" id="10_1wvbp"]
[ext_resource type="PackedScene" uid="uid://cy04nuesstfd0" path="res://ui/esc_menu.tscn" id="11_qns1x"]
[ext_resource type="PackedScene" uid="uid://cg6td68sf3duf" path="res://ui/ui_chat.tscn" id="12_as3hp"]
[ext_resource type="PackedScene" uid="uid://158jfcngo378" path="res://ui/ui_console.tscn" id="13_7vgq5"]
[ext_resource type="PackedScene" uid="uid://12b3h1508pxa" path="res://ui/ui_no_steam.tscn" id="14_1yn0o"]
[ext_resource type="PackedScene" uid="uid://dvuurktpeckou" path="res://ui/ui_connection_dropped_popup_panel.tscn" id="15_8jmgr"]

[node name="UI" type="Control" node_paths=PackedStringArray("escapable_ui_nodes")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_wfx8k")
script = ExtResource("1_w4cnj")
escapable_ui_nodes = [NodePath("EscMenu"), NodePath("UIChat"), NodePath("UIBuildingInterface"), NodePath("UIMain/MenuRight/PlayOptions"), NodePath("UIMain/MenuRight/WorldEditorOptions"), NodePath("UIMain/MenuRight/ModsOptions"), NodePath("UIMain/MenuRight/ConfigsOptions"), NodePath("UIMain/MenuRight/DirectConnection"), NodePath("UIMain/StatusPanel"), NodePath("UIConsole"), NodePath("UIMain/MenuRight/CharacterItemsScrollContainer")]

[node name="UIMain" parent="." instance=ExtResource("2_g37sc")]
layout_mode = 1

[node name="MarginContainer" parent="UIMain/MenuRight/CharacterOptions/CharacterEditMarginContainer/VBoxContainer" index="3"]
theme_override_constants/margin_top = 20

[node name="UIWorld" parent="." instance=ExtResource("4_li8md")]
visible = false
layout_mode = 1
script = ExtResource("7_qrlgp")

[node name="UIWorldEditor" parent="." instance=ExtResource("5_rb0pw")]
visible = false
layout_mode = 1

[node name="UIPrefabEditor" parent="." instance=ExtResource("3_6iv82")]
visible = false
layout_mode = 1

[node name="UIBuildingInterface" parent="." instance=ExtResource("10_1wvbp")]
visible = false
layout_mode = 1

[node name="EscMenu" parent="." instance=ExtResource("11_qns1x")]
visible = false
layout_mode = 1

[node name="UIChat" parent="." instance=ExtResource("12_as3hp")]
visible = false
layout_mode = 1

[node name="UIConsole" parent="." instance=ExtResource("13_7vgq5")]
visible = false
layout_mode = 1

[node name="UINoSteam" parent="." instance=ExtResource("14_1yn0o")]
visible = false
layout_mode = 1

[node name="UIConnectionDropped" parent="." instance=ExtResource("15_8jmgr")]
layout_mode = 1

[connection signal="building_interface_visible" from="UIBuildingInterface" to="UIChat" method="_on_ui_building_interface_building_interface_visible"]

[editable path="UIMain"]
[editable path="UIChat"]
[editable path="UIConnectionDropped"]
